platform/argocd/foundations/05a87ca0-292f-494a-b30f-23f109513d3a.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kp-rc414-source-20260830185452-staging
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 05a87ca0-292f-494a-b30f-23f109513d3a
    kuberploy.io/foundation-contract: v3
    kuberploy.io/project-id: 577a664d-08ee-42c8-a351-0b89163cbeb9
    kuberploy.io/runtime-namespace: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-default-deny
  namespace: kp-rc414-source-20260830185452-staging
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 05a87ca0-292f-494a-b30f-23f109513d3a
    kuberploy.io/foundation-contract: v3
    kuberploy.io/project-id: 577a664d-08ee-42c8-a351-0b89163cbeb9
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-dns-egress
  namespace: kp-rc414-source-20260830185452-staging
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 05a87ca0-292f-494a-b30f-23f109513d3a
    kuberploy.io/foundation-contract: v3
    kuberploy.io/project-id: 577a664d-08ee-42c8-a351-0b89163cbeb9
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-http01-solver-ingress
  namespace: kp-rc414-source-20260830185452-staging
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 05a87ca0-292f-494a-b30f-23f109513d3a
    kuberploy.io/foundation-contract: v3
    kuberploy.io/project-id: 577a664d-08ee-42c8-a351-0b89163cbeb9
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector:
    matchLabels:
      acme.cert-manager.io/http01-solver: "true"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kuberploy-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 8089
